--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <h3>Nuestras Coders</h3>
+<hr>
 <ul>
-<div id="f1"> <p>Mojo jojo</p></div>
-<div id="f2"> <p>Koosy</p></div>
-<div id="f3"> <p>Rojo</p></div>
-<div id="f4"> <p>Tablón</p></div>
-<div id="f5"> <p>Benderella</p></div>
-<div id="f6"> <p>Él</p></div>
+<div id="f1"><span>Mojo jojo</span></div>
+<div id="f2"><span>Koosy</span></div>
+<div id="f3"><span>Rojo</span></div>
+<div id="f4"><span>Tablón</span></div>
+<div id="f5"><span>Benderella</span></div>
+<div id="f6"><span>Él</span></div>
 </ul>
 </body>
 </html>
